--- a/azure-pipelines-10.yml
+++ b/azure-pipelines-10.yml
@@ -25,8 +25,8 @@ steps:
 - task: DotNetCoreCLI@2
   displayName: Build
   inputs:
-    command: build
-    projects: '*/.csproj'
+    command: 'build'
+    projects: '**/*.csproj'
     arguments: '--configuration release'
 
 - task: DotNetCoreCLI@2
