--- a/azure-pipelines-10.yml
+++ b/azure-pipelines-10.yml
@@ -52,3 +52,10 @@ steps:
   inputs:
     artifactName: 'MyProject'
     targetPath: 'MyProject/bin/release/netcoreapp2.2/publish/'
+
+- task: Docker@2
+  inputs:
+    containerRegistry: 'dockerhub'
+    repository: 'azure-devops'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
