Update azure-pipelines-10.yml for Azure Pipelines

--- a/azure-pipelines-10.yml
+++ b/azure-pipelines-10.yml
@@ -51,11 +51,11 @@ steps:
   displayName: Store artefact
   inputs:
     artifactName: 'MyProject'
-    targetPath: 'MyProject/bin/release/netcoreapp2.2/publish/'
+    targetPath: 'MyProject/bin/release/netcoreapp2.2/publish/'   
 
 - task: Docker@2
   inputs:
     containerRegistry: 'dockerhub'
     repository: 'azure-devops'
     command: 'buildAndPush'
-    Dockerfile: 'MyProject/Dockerfile'
+    Dockerfile: 'Dockerfile'
