--- a/azure-pipelines-10.yml
+++ b/azure-pipelines-10.yml
@@ -1,86 +1,19 @@
-jobs:
-- job: BuildAndTest
-  displayName: Build and Test
-
-  pool:
-    vmImage: 'ubuntu-16.04'
-
-  container:
-    image: example.azurecr.io/my-project-pipeline-environment:20190518.1
-    endpoint: 'MyACR'
-
-  services:
-    redis5: redis5
-    redis4: redis4
-
-  variables:
-    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-
-  steps:
-  - task: DotNetCoreCLI@2
-    displayName: Build
-    inputs:
-      command: build
-      projects: '**/*.csproj'
-      arguments: '--configuration release'
-
-  - task: DotNetCoreCLI@2
-    displayName: Test with Redis v5
-    inputs:
-      command: test
-      projects: '**/*Tests.csproj'
-      arguments: '--configuration release'
-      testRunTitle: MyProject - Redis v5 - $(Agent.JobName)
-    env:
-      CONNECTIONSTRINGS_REDIS: redis5:6379
-    continueOnError: true
-
-  - task: DotNetCoreCLI@2
-    displayName: Test with Redis v4
-    inputs:
-      command: test
-      projects: '**/*Tests.csproj'
-      arguments: '--configuration release'
-      testRunTitle: MyProject - Redis v4 - $(Agent.JobName)
-    env:
-      CONNECTIONSTRINGS_REDIS: redis4:6379
-    continueOnError: true
-
-  - task: DotNetCoreCLI@2
-    displayName: Publish
-    inputs:
-      command: publish
-      projects: 'MyProject/MyProject.csproj'
-      publishWebProjects: false
-      zipAfterPublish: false
-      arguments: '--configuration release'
-
-  - task: PublishPipelineArtifact@0
-    displayName: Store artefact
-    inputs:
-      artifactName: 'MyProject'
-      targetPath: 'MyProject/bin/release/netcoreapp2.2/publish/'
-    condition: eq(variables['Agent.JobStatus'], 'Succeeded')
- 
-- job: Package
-  dependsOn: BuildAndTest
-  condition: succeeded()
-
-  pool:
-    vmImage: 'ubuntu-16.04'
-
-  steps:
-  - checkout: none
-
-  - task: DownloadPipelineArtifact@1
-    inputs:
-      artifactName: 'MyProject'
-      targetPath: '$(System.DefaultWorkingDirectory)'
-
-  - task: Docker@2
-    displayName: Docker build and Push
-    inputs:
-      command: buildAndPush
-      containerRegistry: 'MyACR'
-      repository: myproject
-      tags: $(Build.BuildNumber)
+stages:
+- stage: Build
+  jobs:
+  - job: BuildJob
+    steps:
+    - script: echo Building!
+- stage: Test
+  jobs:
+  - job: TestOnWindows
+    steps:
+    - script: echo Testing on Windows!
+  - job: TestOnLinux
+    steps:
+    - script: echo Testing on Linux!
+- stage: Deploy
+  jobs:
+  - job: Deploy
+    steps:
+    - script: echo Deploying the code!
